--- a/estilos.css
+++ b/estilos.css
@@ -6,7 +6,12 @@ body{
     background-image: url(landscape.jpg);
 }
 
-
+#cabecera{
+    width: 100%;
+    height: 30px;
+    background-color: black;
+    margin-bottom: 100px;
+}
 
 #letras {
     color: white;
